force-app/main/default/objects/Table_Action__c/Table_Action__c.object-meta.xml
<CustomObject>
    <description>Defines custom actions (Buttons) for the DynamicMetaTable component.</description>
    <label>Table Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Table Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>