force-app/main/default/objects/Table_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Determines how the action is processed.</description>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
                <default>true</default>
                <label>Flow</label>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>VF Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>