force-app/main/default/objects/Table_Action__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>SLDS Icon name (e.g., utility:email).</description>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>