force-app/main/default/objects/Table_Action__c/fields/Requires_Selection__c.field-meta.xml
<CustomField>
    <fullName>Requires_Selection__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the action is only visible/active when at least one row is selected.</description>
    <label>Requires Selection</label>
    <type>Checkbox</type>
</CustomField>