force-app/main/default/objects/Table_Action__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <description>The parent Table configuration this action belongs to.</description>
    <label>Table</label>
    <referenceTo>Table__c</referenceTo>
    <relationshipLabel>Table Actions</relationshipLabel>
    <relationshipName>Table_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>