force-app/main/default/objects/Table_Action__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>API name of the Flow, Apex Class, or URL to execute.</description>
    <label>Target</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>